# pdf-bookmarker

./: .gitmodules  Cargo.toml  LICENSE  README.md  toc_example.txt
src/: command_parser.rs  main.rs  pdf_utils.rs  toc_format.rs
